--- a/angular.json
+++ b/angular.json
@@ -94,7 +94,9 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "../node_modules/bootstrap/dist/js/bootstrap.js",
+              "../node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": []
           }
