--- a/angular.json
+++ b/angular.json
@@ -94,9 +94,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "../node_modules/bootstrap/dist/js/bootstrap.js",
-              "../node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/styles.scss"
+           
             ],
             "scripts": []
           }
